--- a/DeadlinesManager/Details/ProjectDetails.storyboard
+++ b/DeadlinesManager/Details/ProjectDetails.storyboard
@@ -160,7 +160,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vr7-1X-Rb8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-47.826086956521742" y="1062.0535714285713"/>
+            <point key="canvasLocation" x="-403" y="1456"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="BEp-1O-d4s">
